--- a/core/build.gradle
+++ b/core/build.gradle
@@ -8,7 +8,7 @@ java {
     targetCompatibility = JavaVersion.VERSION_1_8
 }
 
-dependencies{
+dependencies {
 
     // OkHttp
     api(platform("com.squareup.okhttp3:okhttp-bom:4.9.0"))
@@ -22,4 +22,14 @@ dependencies{
 
     //Gson
     api 'com.google.code.gson:gson:2.8.6'
+
+    //Paging3 Common
+    def paging_version = "3.0.1"
+    implementation "androidx.paging:paging-common:$paging_version"
+
+    //Javax Inject
+    implementation "javax.inject:javax.inject:1"
+
+    //Coroutines core
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
 }
