Test - Criando test use case

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -23,10 +23,8 @@ dependencies {
     //Gson
     api 'com.google.code.gson:gson:2.8.6'
 
-    //Paging3 Common
     def paging_version = "3.0.1"
-    implementation "androidx.paging:paging-common:$paging_version"
-
+    api "androidx.paging:paging-common:$paging_version"
     //Javax Inject
     implementation "javax.inject:javax.inject:1"
 
